--- a/aiaa_packages.sty
+++ b/aiaa_packages.sty
@@ -17,33 +17,11 @@
 \usepackage{microtype} % better fonts/apperance
 \usepackage{bm} % boldface
 %----------------------------- GRAPHICS PACKAGES--------------------------
-
+\usepackage[margin=1in]{geometry}
 \usepackage{graphicx} % for pdf, bitmapped graphics files
 \usepackage{subcaption} % make it possible to include more than one captioned figure/table in a single float
 \graphicspath{{./figures/}}% path to images
 
-% TIKZ
-\usepackage{tikz}
-\usepackage{environ}
-\usetikzlibrary{decorations.markings,decorations.pathreplacing,calc}
-
-\tikzset{help lines/.style={very thin,color=gray!50}} % modify the help lines style
-\tikzset{->-/.style={decoration={
-  markings,
-  mark=at position .5 with {\arrow{>}}},postaction={decorate}}}
-  
-  \makeatletter
-\newsavebox{\measure@tikzpicture}
-\NewEnviron{scaletikzpicturetowidth}[1]{%
-  \def\tikz@width{#1}%
-  \def\tikzscale{1}\begin{lrbox}{\measure@tikzpicture}%
-  \BODY
-  \end{lrbox}%
-  \pgfmathparse{#1/\wd\measure@tikzpicture}%
-  \edef\tikzscale{\pgfmathresult}%
-  \BODY
-}
-\makeatother
 %------------- CITATION PACKAGES------------------------------
 
 \usepackage{overcite}
